Starter2/y.output
Nonterminals useless in grammar

   token


Terminals unused in grammar

   UMINUS


Rules useless in grammar

   58 token: ID
   59      | AND
   60      | OR
   61      | NEQ
   62      | LEQ
   63      | GEQ
   64      | EQ
   65      | TRUE_C
   66      | FALSE_C
   67      | INT_C
   68      | FLOAT_C
   69      | CONST
   70      | ELSE
   71      | IF
   72      | WHILE
   73      | FLOAT_T
   74      | INT_T
   75      | BOOL_T
   76      | VEC_T
   77      | IVEC_T
   78      | BVEC_T
   79      | FUNC
   80      | '+'
   81      | '-'
   82      | '*'
   83      | '/'
   84      | '^'
   85      | '!'
   86      | '='
   87      | '<'
   88      | '>'
   89      | ','
   90      | ';'
   91      | '('
   92      | ')'
   93      | '['
   94      | ']'
   95      | '{'
   96      | '}'


Rules useless in parser due to conflicts

    7 declaration: /* empty */


State 4 conflicts: 7 shift/reduce, 6 reduce/reduce
State 71 conflicts: 13 shift/reduce
State 82 conflicts: 1 shift/reduce
State 83 conflicts: 13 shift/reduce


Grammar

    0 $accept: program $end

    1 program: scope

    2 scope: '{' declarations statements '}'

    3 declarations: /* empty */
    4             | declarations declaration

    5 statements: /* empty */
    6           | statements statement

    7 declaration: /* empty */
    8            | type ID ';'
    9            | type ID '=' expression ';'
   10            | CONST type ID '=' expression ';'

   11 statement: variable '=' expression ';'
   12          | IF '(' expression ')' statement else_statement
   13          | WHILE '(' expression ')' statement
   14          | scope
   15          | ';'

   16 else_statement: /* empty */
   17               | ELSE statement

   18 type: INT_T
   19     | BOOL_T
   20     | FLOAT_T
   21     | IVEC_T
   22     | VEC_T
   23     | BVEC_T

   24 expression: constructor
   25           | function
   26           | INT_C
   27           | FLOAT_C
   28           | variable
   29           | unary_opt expression
   30           | expression binary_opt expression
   31           | TRUE_C
   32           | FALSE_C
   33           | '(' expression ')'

   34 variable: ID
   35         | ID '[' INT_C ']'

   36 unary_opt: '!'
   37          | '-'

   38 binary_opt: '+'
   39           | '-'
   40           | '*'
   41           | '/'
   42           | '^'
   43           | '<'
   44           | '>'
   45           | EQ
   46           | AND
   47           | OR
   48           | NEQ
   49           | LEQ
   50           | GEQ

   51 constructor: type '(' arguments_opt ')'

   52 function: function_name '(' arguments_opt ')'

   53 function_name: FUNC

   54 arguments_opt: arguments
   55              | /* empty */

   56 arguments: arguments ',' expression
   57          | expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 36
'(' (40) 12 13 33 51 52
')' (41) 12 13 33 51 52
'*' (42) 40
'+' (43) 38
',' (44) 56
'-' (45) 37 39
'/' (47) 41
';' (59) 8 9 10 11 15
'<' (60) 43
'=' (61) 9 10 11
'>' (62) 44
'[' (91) 35
']' (93) 35
'^' (94) 42
'{' (123) 2
'}' (125) 2
error (256)
FLOAT_T (258) 20
INT_T (259) 18
BOOL_T (260) 19
CONST (261) 10
FALSE_C (262) 32
TRUE_C (263) 31
FUNC (264) 53
IF (265) 12
WHILE (266) 13
ELSE (267) 17
AND (268) 46
OR (269) 47
NEQ (270) 48
EQ (271) 45
LEQ (272) 49
GEQ (273) 50
VEC_T (274) 22
BVEC_T (275) 23
IVEC_T (276) 21
FLOAT_C (277) 27
INT_C (278) 26 35
ID (279) 8 9 10 34 35
UMINUS (280)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1, on right: 0
scope (45)
    on left: 2, on right: 1 14
declarations (46)
    on left: 3 4, on right: 2 4
statements (47)
    on left: 5 6, on right: 2 6
declaration (48)
    on left: 7 8 9 10, on right: 4
statement (49)
    on left: 11 12 13 14 15, on right: 6 12 13 17
else_statement (50)
    on left: 16 17, on right: 12
type (51)
    on left: 18 19 20 21 22 23, on right: 8 9 10 51
expression (52)
    on left: 24 25 26 27 28 29 30 31 32 33, on right: 9 10 11 12 13
    29 30 33 56 57
variable (53)
    on left: 34 35, on right: 11 28
unary_opt (54)
    on left: 36 37, on right: 29
binary_opt (55)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50, on right: 30
constructor (56)
    on left: 51, on right: 24
function (57)
    on left: 52, on right: 25
function_name (58)
    on left: 53, on right: 52
arguments_opt (59)
    on left: 54 55, on right: 51 52
arguments (60)
    on left: 56 57, on right: 54 56


state 0

    0 $accept: . program $end

    '{'  shift, and go to state 1

    program  go to state 2
    scope    go to state 3


state 1

    2 scope: '{' . declarations statements '}'

    $default  reduce using rule 3 (declarations)

    declarations  go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: scope .

    $default  reduce using rule 1 (program)


state 4

    2 scope: '{' declarations . statements '}'
    4 declarations: declarations . declaration

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    CONST    shift, and go to state 9
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12

    FLOAT_T   [reduce using rule 7 (declaration)]
    INT_T     [reduce using rule 7 (declaration)]
    BOOL_T    [reduce using rule 7 (declaration)]
    CONST     [reduce using rule 7 (declaration)]
    IF        reduce using rule 5 (statements)
    IF        [reduce using rule 7 (declaration)]
    WHILE     reduce using rule 5 (statements)
    WHILE     [reduce using rule 7 (declaration)]
    VEC_T     [reduce using rule 7 (declaration)]
    BVEC_T    [reduce using rule 7 (declaration)]
    IVEC_T    [reduce using rule 7 (declaration)]
    ID        reduce using rule 5 (statements)
    ID        [reduce using rule 7 (declaration)]
    '{'       reduce using rule 5 (statements)
    '{'       [reduce using rule 7 (declaration)]
    '}'       reduce using rule 5 (statements)
    '}'       [reduce using rule 7 (declaration)]
    ';'       reduce using rule 5 (statements)
    ';'       [reduce using rule 7 (declaration)]
    $default  reduce using rule 5 (statements)

    statements   go to state 13
    declaration  go to state 14
    type         go to state 15


state 5

    0 $accept: program $end .

    $default  accept


state 6

   20 type: FLOAT_T .

    $default  reduce using rule 20 (type)


state 7

   18 type: INT_T .

    $default  reduce using rule 18 (type)


state 8

   19 type: BOOL_T .

    $default  reduce using rule 19 (type)


state 9

   10 declaration: CONST . type ID '=' expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12

    type  go to state 16


state 10

   22 type: VEC_T .

    $default  reduce using rule 22 (type)


state 11

   23 type: BVEC_T .

    $default  reduce using rule 23 (type)


state 12

   21 type: IVEC_T .

    $default  reduce using rule 21 (type)


state 13

    2 scope: '{' declarations statements . '}'
    6 statements: statements . statement

    IF     shift, and go to state 17
    WHILE  shift, and go to state 18
    ID     shift, and go to state 19
    '{'    shift, and go to state 1
    '}'    shift, and go to state 20
    ';'    shift, and go to state 21

    scope      go to state 22
    statement  go to state 23
    variable   go to state 24


state 14

    4 declarations: declarations declaration .

    $default  reduce using rule 4 (declarations)


state 15

    8 declaration: type . ID ';'
    9            | type . ID '=' expression ';'

    ID  shift, and go to state 25


state 16

   10 declaration: CONST type . ID '=' expression ';'

    ID  shift, and go to state 26


state 17

   12 statement: IF . '(' expression ')' statement else_statement

    '('  shift, and go to state 27


state 18

   13 statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 28


state 19

   34 variable: ID .
   35         | ID . '[' INT_C ']'

    '['  shift, and go to state 29

    $default  reduce using rule 34 (variable)


state 20

    2 scope: '{' declarations statements '}' .

    $default  reduce using rule 2 (scope)


state 21

   15 statement: ';' .

    $default  reduce using rule 15 (statement)


state 22

   14 statement: scope .

    $default  reduce using rule 14 (statement)


state 23

    6 statements: statements statement .

    $default  reduce using rule 6 (statements)


state 24

   11 statement: variable . '=' expression ';'

    '='  shift, and go to state 30


state 25

    8 declaration: type ID . ';'
    9            | type ID . '=' expression ';'

    ';'  shift, and go to state 31
    '='  shift, and go to state 32


state 26

   10 declaration: CONST type ID . '=' expression ';'

    '='  shift, and go to state 33


state 27

   12 statement: IF '(' . expression ')' statement else_statement

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 43
    variable       go to state 44
    unary_opt      go to state 45
    constructor    go to state 46
    function       go to state 47
    function_name  go to state 48


state 28

   13 statement: WHILE '(' . expression ')' statement

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 49
    variable       go to state 44
    unary_opt      go to state 45
    constructor    go to state 46
    function       go to state 47
    function_name  go to state 48


state 29

   35 variable: ID '[' . INT_C ']'

    INT_C  shift, and go to state 50


state 30

   11 statement: variable '=' . expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 51
    variable       go to state 44
    unary_opt      go to state 45
    constructor    go to state 46
    function       go to state 47
    function_name  go to state 48


state 31

    8 declaration: type ID ';' .

    $default  reduce using rule 8 (declaration)


state 32

    9 declaration: type ID '=' . expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 52
    variable       go to state 44
    unary_opt      go to state 45
    constructor    go to state 46
    function       go to state 47
    function_name  go to state 48


state 33

   10 declaration: CONST type ID '=' . expression ';'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 53
    variable       go to state 44
    unary_opt      go to state 45
    constructor    go to state 46
    function       go to state 47
    function_name  go to state 48


state 34

   32 expression: FALSE_C .

    $default  reduce using rule 32 (expression)


state 35

   31 expression: TRUE_C .

    $default  reduce using rule 31 (expression)


state 36

   53 function_name: FUNC .

    $default  reduce using rule 53 (function_name)


state 37

   27 expression: FLOAT_C .

    $default  reduce using rule 27 (expression)


state 38

   26 expression: INT_C .

    $default  reduce using rule 26 (expression)


state 39

   37 unary_opt: '-' .

    $default  reduce using rule 37 (unary_opt)


state 40

   36 unary_opt: '!' .

    $default  reduce using rule 36 (unary_opt)


state 41

   33 expression: '(' . expression ')'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 54
    variable       go to state 44
    unary_opt      go to state 45
    constructor    go to state 46
    function       go to state 47
    function_name  go to state 48


state 42

   51 constructor: type . '(' arguments_opt ')'

    '('  shift, and go to state 55


state 43

   12 statement: IF '(' expression . ')' statement else_statement
   30 expression: expression . binary_opt expression

    AND  shift, and go to state 56
    OR   shift, and go to state 57
    NEQ  shift, and go to state 58
    EQ   shift, and go to state 59
    LEQ  shift, and go to state 60
    GEQ  shift, and go to state 61
    '<'  shift, and go to state 62
    '>'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '^'  shift, and go to state 68
    ')'  shift, and go to state 69

    binary_opt  go to state 70


state 44

   28 expression: variable .

    $default  reduce using rule 28 (expression)


state 45

   29 expression: unary_opt . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 71
    variable       go to state 44
    unary_opt      go to state 45
    constructor    go to state 46
    function       go to state 47
    function_name  go to state 48


state 46

   24 expression: constructor .

    $default  reduce using rule 24 (expression)


state 47

   25 expression: function .

    $default  reduce using rule 25 (expression)


state 48

   52 function: function_name . '(' arguments_opt ')'

    '('  shift, and go to state 72


state 49

   13 statement: WHILE '(' expression . ')' statement
   30 expression: expression . binary_opt expression

    AND  shift, and go to state 56
    OR   shift, and go to state 57
    NEQ  shift, and go to state 58
    EQ   shift, and go to state 59
    LEQ  shift, and go to state 60
    GEQ  shift, and go to state 61
    '<'  shift, and go to state 62
    '>'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '^'  shift, and go to state 68
    ')'  shift, and go to state 73

    binary_opt  go to state 70


state 50

   35 variable: ID '[' INT_C . ']'

    ']'  shift, and go to state 74


state 51

   11 statement: variable '=' expression . ';'
   30 expression: expression . binary_opt expression

    AND  shift, and go to state 56
    OR   shift, and go to state 57
    NEQ  shift, and go to state 58
    EQ   shift, and go to state 59
    LEQ  shift, and go to state 60
    GEQ  shift, and go to state 61
    '<'  shift, and go to state 62
    '>'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '^'  shift, and go to state 68
    ';'  shift, and go to state 75

    binary_opt  go to state 70


state 52

    9 declaration: type ID '=' expression . ';'
   30 expression: expression . binary_opt expression

    AND  shift, and go to state 56
    OR   shift, and go to state 57
    NEQ  shift, and go to state 58
    EQ   shift, and go to state 59
    LEQ  shift, and go to state 60
    GEQ  shift, and go to state 61
    '<'  shift, and go to state 62
    '>'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '^'  shift, and go to state 68
    ';'  shift, and go to state 76

    binary_opt  go to state 70


state 53

   10 declaration: CONST type ID '=' expression . ';'
   30 expression: expression . binary_opt expression

    AND  shift, and go to state 56
    OR   shift, and go to state 57
    NEQ  shift, and go to state 58
    EQ   shift, and go to state 59
    LEQ  shift, and go to state 60
    GEQ  shift, and go to state 61
    '<'  shift, and go to state 62
    '>'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '^'  shift, and go to state 68
    ';'  shift, and go to state 77

    binary_opt  go to state 70


state 54

   30 expression: expression . binary_opt expression
   33           | '(' expression . ')'

    AND  shift, and go to state 56
    OR   shift, and go to state 57
    NEQ  shift, and go to state 58
    EQ   shift, and go to state 59
    LEQ  shift, and go to state 60
    GEQ  shift, and go to state 61
    '<'  shift, and go to state 62
    '>'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '^'  shift, and go to state 68
    ')'  shift, and go to state 78

    binary_opt  go to state 70


state 55

   51 constructor: type '(' . arguments_opt ')'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    $default  reduce using rule 55 (arguments_opt)

    type           go to state 42
    expression     go to state 79
    variable       go to state 44
    unary_opt      go to state 45
    constructor    go to state 46
    function       go to state 47
    function_name  go to state 48
    arguments_opt  go to state 80
    arguments      go to state 81


state 56

   46 binary_opt: AND .

    $default  reduce using rule 46 (binary_opt)


state 57

   47 binary_opt: OR .

    $default  reduce using rule 47 (binary_opt)


state 58

   48 binary_opt: NEQ .

    $default  reduce using rule 48 (binary_opt)


state 59

   45 binary_opt: EQ .

    $default  reduce using rule 45 (binary_opt)


state 60

   49 binary_opt: LEQ .

    $default  reduce using rule 49 (binary_opt)


state 61

   50 binary_opt: GEQ .

    $default  reduce using rule 50 (binary_opt)


state 62

   43 binary_opt: '<' .

    $default  reduce using rule 43 (binary_opt)


state 63

   44 binary_opt: '>' .

    $default  reduce using rule 44 (binary_opt)


state 64

   38 binary_opt: '+' .

    $default  reduce using rule 38 (binary_opt)


state 65

   39 binary_opt: '-' .

    $default  reduce using rule 39 (binary_opt)


state 66

   40 binary_opt: '*' .

    $default  reduce using rule 40 (binary_opt)


state 67

   41 binary_opt: '/' .

    $default  reduce using rule 41 (binary_opt)


state 68

   42 binary_opt: '^' .

    $default  reduce using rule 42 (binary_opt)


state 69

   12 statement: IF '(' expression ')' . statement else_statement

    IF     shift, and go to state 17
    WHILE  shift, and go to state 18
    ID     shift, and go to state 19
    '{'    shift, and go to state 1
    ';'    shift, and go to state 21

    scope      go to state 22
    statement  go to state 82
    variable   go to state 24


state 70

   30 expression: expression binary_opt . expression

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    type           go to state 42
    expression     go to state 83
    variable       go to state 44
    unary_opt      go to state 45
    constructor    go to state 46
    function       go to state 47
    function_name  go to state 48


state 71

   29 expression: unary_opt expression .
   30           | expression . binary_opt expression

    AND  shift, and go to state 56
    OR   shift, and go to state 57
    NEQ  shift, and go to state 58
    EQ   shift, and go to state 59
    LEQ  shift, and go to state 60
    GEQ  shift, and go to state 61
    '<'  shift, and go to state 62
    '>'  shift, and go to state 63
    '+'  shift, and go to state 64
    '-'  shift, and go to state 65
    '*'  shift, and go to state 66
    '/'  shift, and go to state 67
    '^'  shift, and go to state 68

    AND       [reduce using rule 29 (expression)]
    OR        [reduce using rule 29 (expression)]
    NEQ       [reduce using rule 29 (expression)]
    EQ        [reduce using rule 29 (expression)]
    LEQ       [reduce using rule 29 (expression)]
    GEQ       [reduce using rule 29 (expression)]
    '<'       [reduce using rule 29 (expression)]
    '>'       [reduce using rule 29 (expression)]
    '+'       [reduce using rule 29 (expression)]
    '-'       [reduce using rule 29 (expression)]
    '*'       [reduce using rule 29 (expression)]
    '/'       [reduce using rule 29 (expression)]
    '^'       [reduce using rule 29 (expression)]
    $default  reduce using rule 29 (expression)

    binary_opt  go to state 70


state 72

   52 function: function_name '(' . arguments_opt ')'

    FLOAT_T  shift, and go to state 6
    INT_T    shift, and go to state 7
    BOOL_T   shift, and go to state 8
    FALSE_C  shift, and go to state 34
    TRUE_C   shift, and go to state 35
    FUNC     shift, and go to state 36
    VEC_T    shift, and go to state 10
    BVEC_T   shift, and go to state 11
    IVEC_T   shift, and go to state 12
    FLOAT_C  shift, and go to state 37
    INT_C    shift, and go to state 38
    ID       shift, and go to state 19
    '-'      shift, and go to state 39
    '!'      shift, and go to state 40
    '('      shift, and go to state 41

    $default  reduce using rule 55 (arguments_opt)

    type           go to state 42
    expression     go to state 79
    variable       go to state 44
    unary_opt      go to state 45
    constructor    go to state 46
    function       go to state 47
    function_name  go to state 48
    arguments_opt  go to state 84
    arguments      go to state 81


state 73

   13 statement: WHILE '(' expression ')' . statement

    IF     shift, and go to state 17
    WHILE  shift, and go to state 18
    ID     shift, and go to state 19
    '{'    shift, and go to state 1
    ';'    shift, and go to state 21

    scope      go to state 22
    statement  go to state 85
    variable   go to state 24


state 74

   35 variable: ID '[' INT_C ']' .

    $default  reduce using rule 35 (variable)


state 75

   11 statement: variable '=' expression ';' .

    $default  reduce using rule 11 (statement)


state 76

    9 declaration: type ID '=' expression ';' .

    $default  reduce using rule 9 (declaration)


state 77

   10 declaration: CONST type ID '=' expression ';' .

    $default  reduce using rule 10 (declaration)


state 78

   33 expression: '(' expression ')' .
